--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JulianVentura/Seedyfiuba_back_projects#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
