--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,19 @@ on:
       - main
 
 jobs:
-  #test:
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - uses: actions/checkout@v2
-  #    - name: Use Node.js ${{ matrix.node-version }}
-  #      uses: actions/setup-node@v2
-  #      with:
-  #        node-version: '14.16'
-  #    - run: npm ci
-  #    - run: npm run build --if-present
-  #    - run: npm test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.16'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
   build:
-    #needs: test
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
