Mejoro README, agrego comments en env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+#This is the port at which the server will be listening for connections
 PORT=8080
-DATABASE_URL=postgres://postgres:postgres@psql-projects:5432/postgres
+#This is the database url to connect, which contains user, pass, dbname, port and flavour
+DATABASE_URL=postgres://user:pass@example.com:5432/dbname
+#This is the server environment mode, which can either be 'production' or 'development'
 NODE_ENV=development
+#Those are the login configurations, which can be set to True or False, case ignored. If not specified, default is true
+LOG_ERROR=true
+LOG_WARN=true
+LOG_INFO=true
+LOG_DEBUG=false
